# bibsmall

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bibslim/: __init__.py  cli.py  core.py  rules.py
src/bibslim/data/: iso4_abbrev.yml
tests/: test_core.py  test_transformations.py
tests/data/: sample_input.bib  sample_minimal.golden.bib
